# stop-playing-factorio

./: .gitignore  LICENSE  README.md  pyproject.toml  spfbot.service
stop_playing_factorio/: __main__.py  game_watch_bot.py  relative_notifications.py
stop_playing_factorio/db/: __init__.py  conversations.py  game_sessions.py  setup.py  user_exchanges.py  user_state.py  user_states.py
stop_playing_factorio/llm/: __init__.py  core.py  generate_nudge.py  get_bot_response.py  nudge_prompt.py  sanitise.py
