[project]
name = "stop-playing-factorio"
version = "0.0.1"
description = "A silly Discord bot to tell people to stop playing Factorio."
dependencies = [
  "discord.py",
  "python-dotenv",
  "pytz"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stop_playing_factorio"]
